# hello-deep-learning

deep-learning-from-scratch/: README.md  requirements.txt
deep-learning-from-scratch-rust/: .gitignore  Cargo.toml  README.md
deep-learning-from-scratch-rust/ch01/: Cargo.toml
deep-learning-from-scratch-rust/ch01/examples/: 01-05-02array.rs  1_6plotters.rs
deep-learning-from-scratch-rust/examples/: 1_5array.rs  1_6sin_cos.rs  2_3.rs  2_5xor.rs  3_2_3setep_function_graph.rs  3_2_4sigmoid_function_graph.rs  3_2_7relu_function_graph.rs  3_2step_function.rs  3_3_2product_of_matrix.rs  3_4_2.rs  3_4_3.rs  3_5_1.rs  3_5_2.rs  3_5_3.rs  3_6_1mnist_py.rs  plotters.rs
deep-learning-from-scratch-rust/src/: ch1.rs  ch2.rs  ch3.rs  dataset.rs  lib.rs
deep-learning-from-scratch-rust/src/dataset/: minst.rs
deep-learning-from-scratch/ch01/: sin.py
deep-learning-from-scratch/ch02/: xor.py
deep-learning-from-scratch/ch03/: sigmoid.py  step.py
