[package]
name = "deep-learning-from-scratch"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
flate2 = "1.0.35"
lazy_static = "1.5.0"
ndarray = "0.16.1"
ndarray-stats = "0.6.0"
plotters = "0.3.7"
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1.42.0", features = ["full"] }
tokio-macros = "2.4.0"

[dev-dependencies]
wiremock = "0.6.2"
